fixed jquery.mCustomScrollbar.js bug...[2017-06-07 13:30]

--- a/UI/css/jQuery/jquery.mCustomScrollbar.css
+++ b/UI/css/jQuery/jquery.mCustomScrollbar.css
@@ -368,7 +368,7 @@ yx-axis
 	.mCSB_scrollTools .mCSB_buttonDown,
 	.mCSB_scrollTools .mCSB_buttonLeft,
 	.mCSB_scrollTools .mCSB_buttonRight{
-		background-image: url(/pentaho/api/repos/%3Apublic%3AUI%3Aimgs%3AmCSB_buttons.png/content); /* css sprites */
+		background-image: url(../UI/imgs/mCSB_buttons.png); /* css sprites */
 		background-repeat: no-repeat;
 		opacity: 0.4; filter: "alpha(opacity=40)"; -ms-filter: "alpha(opacity=40)"; 
 	}
